[Update] Enhance .gitignore for build artifacts
- Added entries to ignore the `.eggs/` directory and `.so` files to prevent unnecessary clutter in the repository.
- Updated the existing ignore patterns to ensure a cleaner build environment.

--- a/.gitignore
+++ b/.gitignore
@@ -52,6 +52,7 @@ doc/doxygen/html/*
 
 # python egg
 *.egg-info
+.eggs/
 
 # Macos
 **/.DS_Store
@@ -91,3 +92,6 @@ tilelang/jit/adapter/cython/.cycache
 
 # nvshmem
 3rdparty/nvshmem
+
+# .so
+*.so
