--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -61,6 +61,7 @@ repos:
     hooks:
       - id: codespell
         additional_dependencies: [".[toml]"]
+        args: ["-L", "HDA"]
         exclude: |
           (?x)(
             ^.+\.(cpp|hpp|cxx|cc|c|h|cu|cuh)$|
